<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_when_where"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black_Background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zonosnetworks.zonos_net.MainActivity">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/wwHeading1"
            android:layout_width="fill_parent"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content"
            android:src="@mipmap/leagueheading"
            />

        <ImageView
            android:id="@+id/wwSubHeading1"
            android:layout_width="fill_parent"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content"
            android:src="@mipmap/leaguewhenwhere"
            android:maxHeight="200dp"
            android:layout_below="@+id/wwHeading1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/ww_first_para"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ww_firstParagraph"
            android:textColor="@color/White"
            android:layout_below="@id/wwSubHeading1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp" />
        <TextView
            android:id="@+id/ww_second_para"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ww_second_paragraph"
            android:textColor="@color/White"
            android:layout_below="@id/ww_first_para"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="6dp" />

        <ImageView
            android:id="@+id/ww02Arena"
            android:layout_width="fill_parent"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content"
            android:src="@mipmap/leaguestadium"
            android:layout_below="@id/ww_second_para"
            android:layout_marginTop="12dp"
            />

        <TextView
            android:id="@+id/ww_third_para"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ww_third_paragraph"
            android:textColor="@color/White"
            android:layout_below="@id/ww02Arena"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="6dp" />

        <TextView
            android:id="@+id/ww_fourth_para"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ww_fourth_paragraph"
            android:textColor="@color/White"
            android:layout_below="@id/ww_third_para"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="6dp" />

        <TextView
            android:id="@+id/ww_second_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ww_second_heading"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_below="@+id/ww_fourth_para"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp" />

        <TextView
            android:id="@+id/ww_fifth_para"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ww_fifth_paragraph"
            android:textColor="@color/White"
            android:layout_below="@id/ww_second_heading"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="6dp" />

        <TextView
            android:id="@+id/ww_sixth_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ww_sixth_paragraph"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_below="@+id/ww_fifth_para"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp" />




    </RelativeLayout>

    </ScrollView>